--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -1,29 +1,24 @@
-# This workflow will do a clean install of node dependencies, build the source code and run tests across different versions of node
-# For more information see: https://help.github.com/actions/language-and-framework-guides/using-nodejs-with-github-actions
-
-name: Node.js CI
-
-on:
+name: build
+on: 
   push:
-    branches: [ master ]
-  pull_request:
-    branches: [ master ]
-
+    paths:
+      - '**.js'
 jobs:
-  build:
-
-    runs-on: ubuntu-latest
-
+  build:  # the name of the job_id. labeled 'build'
+    name: my job
+    runs-on: ${{ matrix.os }}
     strategy:
       matrix:
-        node-version: [10.x, 12.x, 14.x]
-
-    steps:
-    - uses: actions/checkout@v2
-    - name: Use Node.js ${{ matrix.node-version }}
-      uses: actions/setup-node@v1
-      with:
-        node-version: ${{ matrix.node-version }}
-    - run: npm ci
-    - run: npm run build --if-present
-    - run: npm test
+        os: [macos-latest, windows-latest, ubuntu-latest]
+        node: [10, 12, 14]
+        exclude:
+          - os: macos-latest
+            node: 10
+    steps: 
+      - uses: actions/checkout@v2
+      - name: Use node.js ${{ matrix.node }} 
+        uses: actions/setup-node@v1
+        with:
+          node-version: ${{ matrix.node }}
+      - run: npm ci
+      - run: npm run build --if-present
