--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -21,4 +21,5 @@ runs-on: ${{ matrix.os }}
       uses: actions/setup-node@v1
       with:
         node-version: \${{ matrix.node }} 
+    - run: npm install
     - run: npm test
