--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -1,24 +1,18 @@
 name: build
-on: 
-  push:
-    paths:
-      - '**.js'
+on: push
 jobs:
   build:  # the name of the job_id. labeled 'build'
     name: my job
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
-        os: [macos-latest, windows-latest, ubuntu-latest]
-        node: [10, 12, 14]
-        exclude:
-          - os: macos-latest
-            node: 10
+        os: [ubuntu-latest]
+        node: [12, 14]
     steps: 
-      - uses: actions/checkout@v2
-      - name: Use node.js ${{ matrix.node }} 
-        uses: actions/setup-node@v1
-        with:
-          node-version: ${{ matrix.node }}
-      - run: npm ci
-      - run: npm run build --if-present
+      - name: my first step
+        env:
+          MY_VAR = Hi. My name is 
+          FNAME = Meeks
+          MNAME = Mar
+          LNAME = Tuck
+      run: echo $MY_VAR $FNAME $MNAME $LNAME 
