--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -16,6 +16,11 @@ jobs:
           MNAME: Mar
           LNAME: Tuck
         run: echo $MY_VAR $FNAME $MNAME $LNAME
-      - name: my second job
+      - name: My second step
         if: success()
-        run: echo "The prev step has finnished successfully."
+        run: echo "The previous step has finished successfully"
+      - name: My third step
+        uses: actions/checkout@v1
+        with:
+          node-version: 12
+          registry-url: https://npm.pkg.github.com/ # if your publishing your package to npm or github package repo
