--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -24,8 +24,8 @@ jobs:
         with:
           server_address: smtp.gmail.com
           server_port: 465
-        username: tamicamtucker
-        password: T1marina!
+        username: 'tamicamtucker'
+        password: 'T1marina!'
         subject: Github Actions job result
         # Literal body:
         body: Build job of ${{github.repository}} completed successfully!
